<resources>
    <string name="app_name">RememberSMS</string>
    <string name="phone">Send to: </string>
    <string name="message">Message </string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="noRecordsFound">No Records Found</string>
    <string name="add">ADD</string>

    <string name="hintformessage">Write your Message here</string>
    <string name="hintnameEditText">Select Contract</string>




    <string name="list">List of task</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_table_manipulation">table_manipulation</string>
</resources>
